# hubeau-py

./: .gitignore  README.md  pyproject.toml
examples/: demo.ipynb  demo_qualite_rivieres.ipynb
examples/hydrometrie/: demo_hydrometrie_client.ipynb  demo_hydrometrie_raw.ipynb
examples/qualite_rivieres/: demo_qualite_rivieres.ipynb
scripts/: check_undocumented_fields.py  explore_qualite_rivieres.py  inspect_analyse_pc.py  inspect_qualite_rivieres_models.py  inspect_station_pc.py  test_qualite_rivieres_models.py
scripts/hydrometrie/: explore.py  inspect_fields.py
scripts/qualite_rivieres/: analyze_time_series.py  api_utils.py  explore.py  inspect_condition_env_pc.py  inspect_operation_pc.py
src/hubeau_py/: __init__.py  client.py
src/hubeau_py/api/: hydrometrie.py  qualite_rivieres.py
src/hubeau_py/models/: geojson.py  hydrometrie.py  qualite_rivieres.py
tests/: test_client.py  test_hydrometrie.py  test_qualite_rivieres.py
