[tool.poetry]
name = "hubeau-py"
version = "0.0.1"
description = "Pythonic, typed, modern client for the Hubeau water data APIs."
authors = ["Pierre Feilles <pierre.feilles@gmail.com>"]
readme = "README.md"
packages = [{ include = "hubeau_py", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.27.0"
pydantic = "^2.7.0"
pandas = "^2.2.0"
matplotlib = "^3.10.3"
geopandas = "^1.0.1"
shapely = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.11.10"
black = "^24.4.2"
mypy = "^1.10.0"
notebook = "^7.2.0"
jupyter = "^1.1.1"
ipython = "^8.24"
rich = "^14.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
extend-include = ["*.ipynb"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
